Adding the assets which I forgot  :sweat_smile:

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header-container container">
       <button class="open-list"><i class="ph ph-list"></i></button>
 
-      <img src="../challenge08/img/logo.svg" alt="">
+      <img src="./assets/logo.svg" alt="">
       <nav class="inactive">
         <ul class="nav-list inactive">
           <li class="nav-item"><a href="#">Home</a></li>
@@ -76,7 +76,7 @@
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam.
           </p>
-          <img src="../challenge08/img/hero-img.jpg" alt="">
+          <img src="./assets/hero-img.jpg" alt="">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
